# makerspace-calculator

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README_Template.md  docker-compose.yml
docker/: Dockerfile.dev  Dockerfile.prod
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  example_8cpp-example.html  examples.html  files.html  globals.html  globals_func.html  graph_legend.html  header_8h_source.html  index.html  makerspace_8cpp.html  makerspace_8cpp__incl.map  makerspace_8cpp__incl.md5  makerspace_8h_source.html  md_README.html  myModule_8cpp.html  myModule_8cpp__incl.dot  namespacemakerspace.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_d.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js
docs/latex/: example_8cpp-example.tex  examples.tex  files.tex  header_8h_source.tex  index.tex  makerspace_8cpp.tex  makerspace_8cpp__incl.md5  makerspace_8h_source.tex  md_README.tex  myModule_8cpp.tex  myModule_8cpp.tex.tmp  myModule_8cpp__incl.dot  namespacemakerspace.tex  namespaces.tex  refman.tex
script/: docker.sh  make.sh  setup.sh
src/: CMakeLists.txt  constants.h  main.cpp  makerspace-constexpr.h  makerspace.cpp  makerspace.h  stream_validation.cpp  stream_validation.h
test/: CMakeLists.txt  calculatePrice.cpp  exceedTime.cpp  inputError.cpp  inputInt.cpp  test.cpp
